--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         <button class="division">/</button>
         <button class="equals">=</button>
         <button class="clear">C</button>
+        <button>0</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
     </div>
 <script>
 let a = "";
@@ -66,6 +76,16 @@ display.textContent("");
 equalsButton = function() {
 operate(a, b, operator);
 }
+
+//////////////////////////////////
+//////////////////////////////////
+
+const button = document.querySelector('button');
+button.addEventListener('click', () => {
+    buttonPush();
+    console.log(a)
+})
+
 
 </script>
 </body>
