--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="container">
     <div id="display">0</div>
-    <div>
     <button id="one">1</button>
     <button id="two">2</button>
     <button id="three">3</button>
@@ -24,9 +24,7 @@
     <button id="minus">-</button>
     <button id="divide">/</button>
     <button id="multiply">*</button>
-    <div>
-        <button id="clear">C</button>
-    </div>
+    <button id="clear">C</button>
     </div>
     <script>
 
