Add styling and spacing for buttons

--- a/index.html
+++ b/index.html
@@ -8,23 +8,35 @@
 </head>
 <body>
     <div id="container">
-    <div id="display">0</div>
-    <button id="one">1</button>
-    <button id="two">2</button>
-    <button id="three">3</button>
-    <button id="four">4</button>
-    <button id="five">5</button>
-    <button id="six">6</button>
-    <button id="seven">7</button>
-    <button id="eight">8</button>
-    <button id="nine">9</button>
-    <button id="zero">0</button>
-    <button id="equals">=</button>
-    <button id="plus">+</button>
-    <button id="minus">-</button>
-    <button id="divide">/</button>
-    <button id="multiply">*</button>
-    <button id="clear">C</button>
+      <div id="display">0</div>
+
+      <div id="buttonBox">
+          <div id="row">
+              <button id="seven">7</button>
+              <button id="eight">8</button>
+              <button id="nine">9</button>
+              <button id="clear">C</button>
+          </div>
+          <div id="row">
+              <button id="four">4</button>
+              <button id="five">5</button>
+              <button id="six">6</button>
+              <button id="divide">/</button>
+          </div>
+          <div id="row">
+              <button id="one">1</button>
+              <button id="two">2</button>
+              <button id="three">3</button>
+              <button id="multiply">*</button>
+          </div>
+          <div id="row">
+              <button id="zero">0</button>
+              <button id="equals">=</button>
+              <button id="plus">+</button>
+              <button id="minus">-</button>
+          </div>
+      </div>
+      
     </div>
     <script>
 
